# cr8_games_engine

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt  EngineBuffer.cpp  EngineBuffer.h  EngineCamera.cpp  EngineCamera.h  EngineDevice.cpp  EngineDevice.h  EngineGameObject.cpp  EngineGameObject.h  EngineKeyboardMovementController.cpp  EngineKeyboardMovementController.h  EngineModel.cpp  EngineModel.h  EnginePipeline.cpp  EnginePipeline.h  EngineRenderer.cpp  EngineRenderer.h  EngineSimpleRenderSystem.cpp  EngineSimpleRenderSystem.h  EngineSwapChain.cpp  EngineSwapChain.h  EngineUtils.h  EngineWindow.cpp  EngineWindow.h  FrameInfo.h  Logger.cpp
engine/m1/: CMakeLists.txt  Logger.h
sandbox/: CMakeLists.txt  SandboxApp.cpp  SandboxApp.h  compile.sh  main.cpp
sandbox/shader/: simple_shader.frag  simple_shader.vert
